--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@mdi/font": "^3.2.89",
     "core-js": "^2.5.4",
+    "firebase": "^5.7.0",
+    "materialize-social": "^1.0.3",
     "ngx-materialize": "^6.1.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
